--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -2011,3 +2011,26 @@
 	volume = {52},
 	year = {1987},
 }
+
+@book{kelly-1981,
+	place = {Hagen},
+	title = {The basic concepts of enriched category theory},
+	publisher = {Fernuniversität},
+	author = {Kelly, Gregory Max},
+	year = {1981},
+}
+
+@inproceedings{seely-1987b,
+	title = {Modelling Computations: A 2-Categorical Framework},
+	author = {Robert A. G. Seely},
+	booktitle = {Logic in Computer Science},
+	year = {1987},
+	url = {https://api.semanticscholar.org/CorpusID:3718688},
+}
+
+@article{baez-2019,
+	title = {Enriched lawvere theories for operational semantics},
+	author = {Baez, John C and Williams, Christian},
+	journal = {arXiv preprint arXiv:1905.05636},
+	year = {2019},
+}
