--- a/writeup/thesis.tex
+++ b/writeup/thesis.tex
@@ -121,6 +121,7 @@ support of my friends and family. I love and appreciate you all so much.
 \label{chap:category-theory}
 \input{category-theory}
 
+\addtocontents{toc}{\protect\newpage}
 \chapter{Categorical Cryptography}
 \label{chap:categorical-cryptography}
 \input{categorical-cryptography.tex}
