--- a/writeup/cryptography.tex
+++ b/writeup/cryptography.tex
@@ -1,5 +1,13 @@
-[TODO: An introduction to the chapter;
-cite~\cite{katz-lindell-2014, pass-shelat-2020, rosulek-2021}.]
+Before considering categorical models of cryptography, we need to give some
+basic background. We aim this chapter primarily towards mathematicians, and thus
+will present the basics of cryptography starting from foundational
+complexity-theoretic notions. The reader unfamiliar with computer science theory
+should read~\Cref{chap:cs-theory}.
+
+Standard introductions to cryptography include~\cite{katz-lindell-2014,
+pass-shelat-2020, rosulek-2021}; this section is especially indebted to the
+presentation of~\cite{pass-shelat-2020}. Many of the issues we consider are also
+exposited by~\cite{lindell-2017}.
 
 \section{Foundations}
 
@@ -685,8 +693,6 @@ fixed $m$.
 \end{ex}
 
 \subsection{Interactive Function Computation}
-
-% TODO: cite \cite{lindell-2017}.
 
 Suppose we are given a (potentially stochastic) series of functions \[
   f: X_1\times\cdots\times X_N\to Y_1\times\cdots\times Y_N.
