--- a/writeup/thesis.tex
+++ b/writeup/thesis.tex
@@ -4,13 +4,12 @@
 %%
 \documentclass[12pt,twoside]{reedthesis}
 
-\title{Categories for Cryptographic Composability} % TODO: title
+\title{Categories for Cryptographic Composability}
 \author{Riley Shahar}
 
 \date{May 2024}
 \division{Mathematics and Natural Sciences}
 
-% TODO: order of advisors?
 \advisor{Angélica Osorno}
 \altadvisor{Adam Groce}
 \department{Mathematics and Computer Science} % won't compile without this
@@ -38,7 +37,7 @@
 
 \maketitle
 \frontmatter
-\pagestyle{empty} % TODO: can I roman numerial number it?
+\pagestyle{empty}
 
 \chapter*{Acknowledgements}
 
@@ -80,9 +79,6 @@ support of my friends and family. I love and appreciate you all so much.
 
 % \chapter*{Preface}
 % TODO: preface
-
-% \chapter*{List of Abbreviations}
-% TODO: abbreviations
 
 
 \tableofcontents
